deps: Selenium 4.19.0 (#401)
Fixes #272
fixes #426
fixes #420
fixes #359

closes #374
closes #403
closes #421
closes #401