@@ -48,6 +48,11 @@
       <artifactId>java-client</artifactId>
       <version>${version.appium.java.client}</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-chrome-driver</artifactId>
+      <version>${version.selenium}</version>
+    </dependency>
 
     <!-- test dependencies -->
     <dependency>
@@ -84,5 +89,25 @@
       <classifier>tests</classifier>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>jdk9plus</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
